security.tf
resource "aws_security_group" "app_sg" {
    name = "app_sg"
    description = "Allow SSH and HTTP"
    vpc_id = aws_vpc.main.id


    ingress  {

        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
       
    }
    ingress  {

        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
       
    }
    
    
    
   
     egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]

            
        }
  
}
